--- a/assets/sass/_main.scss
+++ b/assets/sass/_main.scss
@@ -33,3 +33,14 @@ body {
         width: 20px;
     }
 }
+
+.scoreboard {
+    span {
+        font-family: 'Harmattan', sans-serif;
+        font-size: 30px;
+
+        &#score {
+            font-size: 60px;
+        }
+    }
+}
